scrollbar error fix

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -758,6 +758,10 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
